# maitha_challenger

./: .env.example  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  main.py  pyproject.toml
src/domain/contracts/repositories/: health_check_repository.py  inventory_repository.py  product_repository.py
src/domain/entities/: product.py  purchase.py
src/domain/use_cases/: health_check.py  product_create.py  product_delete.py  product_get.py  product_inventory_processor.py  product_send_inventory.py  product_update.py
src/infra/amqp/: connection.py  consumer.py  inventory_repository.py
src/infra/amqp/repositories/: inventory_repository.py
src/infra/http/: server.py
src/infra/http/routers/: health_check_router.py  product_router.py
src/infra/postgres/: health_check_repository.py
src/infra/sqlalchemy/: connection.py  health_check_repository.py  instance.py  models.py  product_repository.py
src/infra/sqlalchemy/repositories/: health_check_repository.py  product_repository.py
tests/: conftest.py
tests/domain/use_cases/: product_create_test.py  product_delete_test.py  product_get_test.py  product_update_test.py
tests/fixtures/: mocks.py
tests/use_cases/: health_check_test.py  product_delete_test.py
